AB#687 feat: persist user set sync in minutes + save sync interval and notification preferences + properly show density of items + differentiate trigger types
